# ree-receipt-oracle

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_client.py
agentic/blueprints/: SERVICE_BLUEPRINT.md
agentic/logs/: DEVLOG.md  SMOKE_TEST.md
agentic/plan/: DEVELOPMENT_PLAN.md  TASKS.md
app/: cache.py  config.py  main.py  pricing.py  ree_runner.py
app/routes/: quote.py  verify.py
examples/: agent_pipeline.py
ree_oracle_client/: __init__.py  cli.py  client.py  exceptions.py
test-receipts/: non-reproducible-receipt.json  receipt_20260401_160308.json  receipt_20260402_170955.json  receipt_20260402_172213.json  receipt_20260402_172242.json  receipt_20260402_173135.json  receipt_20260402_173254.json
