[project]
name = "ree-receipt-oracle"
version = "0.1.0"
description = "Pay-per-verification service for Gensyn REE receipts using x402"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.0.0",
    "x402[evm]>=0.1.0",
    "httpx>=0.27.0",
]
