[project]
name = "ree-receipt-oracle"
version = "0.1.0"
description = "Pay-per-verification service for Gensyn REE receipts using x402"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.0.0",
    "x402[evm]>=2.6.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
]

[project.scripts]
ree-oracle = "ree_oracle_client.cli:app"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["ree_oracle_client*"]
